--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,10 +24,17 @@
         <activity android:name=".Splash.SplashScreen" />
         <activity android:name=".Map.MapsActivity" />
         <activity android:name=".Tabs.TabMainActivity"/>
+        <activity android:name=".SocialLogin.SocailMainActivity"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
 
     </application>
 
