--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.sugar.boilerplate">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -25,6 +26,8 @@
         <activity android:name=".Map.MapsActivity" />
         <activity android:name=".Tabs.TabMainActivity"/>
         <activity android:name=".SocialLogin.SocailMainActivity"/>
+        <activity android:name=".BottomNavigation.BottomNavigationMain"/>
+        <activity android:name=".ExpandableRecycler.ExpandRecyclerViewMain"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
