--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
+    packagingOptions {
+        exclude 'META-INF/androidx.localbroadcastmanager_localbroadcastmanager.version'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/main.kotlin_module'
+
+    }
 }
 
 dependencies {
@@ -39,5 +52,10 @@ dependencies {
 
     //Social Login
     implementation 'codelight.studios:android-smart-login:1.2'
+//        // Bottom NavigationBar
+//    implementation 'com.etebarian:meow-bottom-navigation:1.0.0'
+
+    // Expandable Recyclerview
+    implementation 'com.hgDendi:expandable-recyclerview-adapter:1.0.1'
 
 }
