--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".SocialLogin.SocailMainActivity"/>
         <activity android:name=".BottomNavigation.BottomNavigationMain"/>
         <activity android:name=".ExpandableRecycler.ExpandRecyclerViewMain"/>
+        <activity android:name=".AppIntro.AppIntroMainActivity"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
