--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,13 @@ dependencies {
     // Expandable Recyclerview
     implementation 'com.hgDendi:expandable-recyclerview-adapter:1.0.1'
 
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+
+    // Nested Fragment
+    implementation 'com.sbrukhanda.fragmentviewpager:fragmentviewpager:1.0.0'
+
 }
