--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,14 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
 
     <application
+        android:name=".Network.Retrofit.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -29,6 +34,9 @@
         <activity android:name=".BottomNavigation.BottomNavigationMain"/>
         <activity android:name=".ExpandableRecycler.ExpandRecyclerViewMain"/>
         <activity android:name=".AppIntro.AppIntroMainActivity"/>
+        <activity android:name=".GetData.GetResponseData"/>
+        <activity android:name=".NestedFragment.activities.NestedMainActivity"/>
+        <activity android:name=".ScreenShot.ScreenShotMain"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
