--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,6 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.github.burakeregar:EasiestGenericRecyclerAdapter:v1.0'
 
+    implementation 'com.github.darsh2:MultipleImageSelect:v0.0.4'
+
 }
